--- a/pages/index.html
+++ b/pages/index.html
@@ -21,29 +21,45 @@
     </nav>
     <main>
       <div class="tarjetas">
-        <div class="card Carc">
-          <img src="../img/actu.avif" alt="actu" />
+        <a
+          href="https://playvalorant.com/es-mx/news/game-updates/"
+          class="sinL"
+          target="_blank"
+        >
+          <div class="card Carc">
+            <img src="../img/actu.avif" alt="actu" />
 
-          <div class="card-content">
-            <h1>Actualizaciones</h1>
+            <div class="card-content">
+              <h1>Actualizaciones</h1>
+            </div>
           </div>
-        </div>
+        </a>
+        <a
+          href="https://playvalorant.com/es-mx/agents/"
+          class="sinL"
+          target="_blank"
+        >
+          <div class="card Carc">
+            <img src="../img/agentes.jpeg" alt="agentes" />
 
-        <div class="card Carc">
-          <img src="../img/agentes.jpeg" alt="agentes" />
-
-          <div class="card-content">
-            <h1>Agentes</h1>
+            <div class="card-content">
+              <h1>Agentes</h1>
+            </div>
           </div>
-        </div>
+        </a>
+        <a
+          href="https://playvalorant.com/es-mx/maps/"
+          class="sinL"
+          target="_blank"
+        >
+          <div class="card Carc">
+            <img src="../img/mapas.webp" alt="mapas" />
 
-        <div class="card Carc">
-          <img src="../img/mapas.webp" alt="mapas" />
-
-          <div class="card-content">
-            <h1>Mapas</h1>
+            <div class="card-content">
+              <h1>Mapas</h1>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
     </main>
     <footer>
